<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuFragment"
    android:background="@color/beige_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/content_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginTop="@dimen/margin"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_map_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/green_500"
                app:strokeWidth="4dp" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/buttonGameCreate"
                android:layout_width="340dp"
                android:layout_height="63dp"
                android:layout_margin="@dimen/margin"
                android:text="@string/create_new_game"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/buttonGameCurrent"
                android:layout_width="340dp"
                android:layout_height="63dp"
                android:layout_margin="@dimen/margin"
                android:text="@string/current_game"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGameJoin"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/buttonGameJoin"
                android:layout_width="340dp"
                android:layout_height="63dp"
                android:layout_margin="@dimen/margin"
                android:text="@string/join_game"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGameCreate"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/buttonShowQr"
                android:layout_width="340dp"
                android:layout_height="63dp"
                android:layout_margin="@dimen/margin"
                android:text="@string/show_qr"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGameCurrent"
                app:layout_constraintVertical_bias="0.295"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</FrameLayout>
</layout>