<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment"
    android:background="@color/beige_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/content_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginTop="@dimen/margin"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_map_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/green_500"
                app:strokeWidth="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/elem_height_normal"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHighlight="#7cff88"
                    android:textSize="22sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/elem_height_normal"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHighlight="#7cff88"
                    android:textSize="22sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/signInButton"
                android:layout_width="@dimen/content_width"
                android:layout_height="@dimen/elem_height_normal"
                android:layout_margin="@dimen/margin"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/signUpInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
                app:layout_constraintVertical_bias="0.0"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/signUpButton"
                android:layout_width="@dimen/content_width_smaller"
                android:layout_height="@dimen/elem_height_smaller"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:pb_colorComplete="@color/buttonComplete"
                app:pb_colorNormal="@color/buttonNormal"
                app:pb_colorPressed="@color/buttonPressed"
                app:pb_colorProgress="@color/buttonProgress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <TextView
                android:id="@+id/signUpInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</FrameLayout>
</layout>